# polymarket-rs

./: Cargo.toml  README.md
examples/: websocket_market.rs
src/client/: data.rs  gamma.rs
src/orders/: builder.rs  price.rs
src/request/: pagination.rs
src/types/: enums.rs  market.rs  order.rs  serde_helpers.rs  trade.rs  websocket.rs
