[package]
name = "polymarket-rs"
version = "0.1.3"
edition = "2021"
authors = ["Pawsengineer <play.pawsengineer@gmail.com>"]
description = "Rust client library for the Polymarket CLOB and Data API"
license = "MIT"
repository = "https://github.com/pawsengineer/polymarket-rs"
keywords = ["polymarket", "api", "clob", "client", "prediction-markets"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"

# Ethereum & Crypto
alloy-primitives = "0.8.12"
alloy-sol-types = { version = "0.8.12", features = ["eip712-serde"] }
alloy-signer = "0.7.2"
alloy-signer-local = "0.7.2"

# HTTP & Async
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Decimal math
rust_decimal = { version = "1.36.0", features = ["serde-str"] }
rust_decimal_macros = "1.20.0"

# Cryptography
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22.1"

# Random
rand = "0.8.5"

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "polymarket_rs"
path = "src/lib.rs"
